--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -138,16 +138,22 @@
     <EmbeddedResource Include="Data\Migrations\201704032013232_CreateTeamMember.resx">
       <DependentUpon>201704032013232_CreateTeamMember.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201704091729579_CreateProduct.resx">
+      <DependentUpon>201704091729579_CreateProduct.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Infrastructure\Mail\LocalMail.html" />
     <EmbeddedResource Include="Infrastructure\Logging\LocalLog.html" />
     <Content Include="Scripts\controllers\account\dashboard\overview.controller.js" />
     <Content Include="Scripts\controllers\account\password-recoveries\new-password-recovery.controller.js" />
     <Content Include="Scripts\controllers\account\users\signin.controller.js" />
     <Content Include="Scripts\controllers\account\users\signup.controller.js" />
+    <Content Include="Scripts\controllers\catalog\products\product-edit.controller.js" />
+    <Content Include="Scripts\controllers\catalog\products\product-list.controller.js" />
     <Content Include="Scripts\controllers\manage\stores\store-edit.controller.js" />
     <Content Include="Scripts\controllers\manage\stores\store-list.controller.js" />
     <Content Include="Scripts\locale\pt-br.js" />
     <Content Include="Scripts\modules\dyoub-app.module.js" />
+    <Content Include="Scripts\services\catalog\product.service.js" />
     <Content Include="Scripts\services\manage\store.service.js" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -158,6 +164,7 @@
     <Compile Include="Controllers\Account\DashboardController.cs" />
     <Compile Include="Controllers\Account\RecoveryController.cs" />
     <Compile Include="Controllers\Account\UsersController.cs" />
+    <Compile Include="Controllers\Catalog\ProductsController.cs" />
     <Compile Include="Controllers\Manage\StoresController.cs" />
     <Compile Include="Controllers\PortfolioController.cs" />
     <Compile Include="Controllers\TenantController.cs" />
@@ -194,6 +201,10 @@
     <Compile Include="Data\Migrations\201704032013232_CreateTeamMember.Designer.cs">
       <DependentUpon>201704032013232_CreateTeamMember.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201704091729579_CreateProduct.cs" />
+    <Compile Include="Data\Migrations\201704091729579_CreateProduct.Designer.cs">
+      <DependentUpon>201704091729579_CreateProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Extensions\HttpContextBaseExtension.cs" />
     <Compile Include="Extensions\HttpRequestBaseExtensions.cs" />
@@ -226,6 +237,9 @@
     <Compile Include="Models\EntityModel\ApplicationContext.cs" />
     <Compile Include="Models\EntityModel\Account\Tenant.cs" />
     <Compile Include="Models\EntityModel\Account\User.cs" />
+    <Compile Include="Models\EntityModel\Catalog\Product.cs" />
+    <Compile Include="Models\EntityModel\Catalog\ProductMapping.cs" />
+    <Compile Include="Models\EntityModel\Catalog\ProductQuery.cs" />
     <Compile Include="Models\EntityModel\Manage\Store.cs" />
     <Compile Include="Models\EntityModel\Manage\StoreMapping.cs" />
     <Compile Include="Models\EntityModel\Manage\StoreQuery.cs" />
@@ -235,6 +249,7 @@
     <Compile Include="Models\EntityModel\Manage\TeamMemberMapping.cs" />
     <Compile Include="Models\EntityModel\Manage\TeamRule.cs" />
     <Compile Include="Models\EntityModel\Manage\TeamRuleMapping.cs" />
+    <Compile Include="Models\EntityModel\Overview\CatalogCount.cs" />
     <Compile Include="Models\EntityModel\Overview\ManagementCount.cs" />
     <Compile Include="Models\EntityModel\TenantContext.cs" />
     <Compile Include="Models\ServiceModel\Account\AccountRecovery.cs" />
@@ -255,13 +270,20 @@
     <Compile Include="Models\ViewModel\Account\PasswordRecoveries\UpdatePasswordRecoveryViewModel.cs" />
     <Compile Include="Models\ViewModel\Account\Users\SigninViewModel.cs" />
     <Compile Include="Models\ViewModel\Account\Users\SignupViewModel.cs" />
+    <Compile Include="Models\ViewModel\Catalog\Products\CreateProductViewModel.cs" />
+    <Compile Include="Models\ViewModel\Catalog\Products\ListProductsViewModel.cs" />
+    <Compile Include="Models\ViewModel\Catalog\Products\ProductIdViewModel.cs" />
+    <Compile Include="Models\ViewModel\Catalog\Products\UpdateProductViewModel.cs" />
     <Compile Include="Models\ViewModel\Manage\Stores\CreateStoreViewModel.cs" />
     <Compile Include="Models\ViewModel\Manage\Stores\ListStoresViewModel.cs" />
     <Compile Include="Models\ViewModel\Manage\Stores\StoreIdViewModel.cs" />
     <Compile Include="Models\ViewModel\Manage\Stores\UpdateStoreViewModel.cs" />
+    <Compile Include="Results\Account\Dashboard\CatalogOverviewJson.cs" />
     <Compile Include="Results\Account\Dashboard\GeneralOverviewJson.cs" />
     <Compile Include="Results\Account\Dashboard\ManagementOverviewJson.cs" />
     <Compile Include="Results\Account\Users\SignupEmail.cs" />
+    <Compile Include="Results\Catalog\Products\ProductJson.cs" />
+    <Compile Include="Results\Catalog\Products\ProductListJson.cs" />
     <Compile Include="Results\Common\AccessDeniedStatusCode.cs" />
     <Compile Include="Results\Common\ModelErrorsJson.cs" />
     <Compile Include="Results\Common\NotFoundStatusCode.cs" />
@@ -300,6 +322,11 @@
     <Content Include="Views\Account\Dashboard\Commercial.cshtml" />
     <Content Include="Views\Account\Dashboard\Financial.cshtml" />
     <Content Include="Views\Account\Dashboard\Stock.cshtml" />
+    <Content Include="Scripts\controllers\catalog\products\product-details.controller.js" />
+    <Content Include="Views\Catalog\Products\ProductDetails.cshtml" />
+    <Content Include="Views\Catalog\Products\ProductEdit.cshtml" />
+    <Content Include="Views\Catalog\Products\ProductList.cshtml" />
+    <Content Include="Views\Catalog\Products\_RemoveProduct.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
