--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -224,32 +224,32 @@
     <Compile Include="Infrastructure\EntityFramework\FilteredDbSet.cs" />
     <Compile Include="Infrastructure\EntityFramework\PropertyFilterExpression.cs" />
     <Compile Include="Infrastructure\IO\EmbeddedResource.cs" />
-    <Compile Include="Models\EntityModel\Account\ClosureRequest.cs" />
-    <Compile Include="Models\EntityModel\Account\ClosureRequestMapping.cs" />
-    <Compile Include="Models\EntityModel\Account\ClosureRequestQuery.cs" />
-    <Compile Include="Models\EntityModel\Account\ITenantData.cs" />
-    <Compile Include="Models\EntityModel\Account\PasswordRecovery.cs" />
-    <Compile Include="Models\EntityModel\Account\PasswordRecoveryMapping.cs" />
-    <Compile Include="Models\EntityModel\Account\PasswordRecoveryQuery.cs" />
-    <Compile Include="Models\EntityModel\Account\TenantMapping.cs" />
-    <Compile Include="Models\EntityModel\Account\TenantQuery.cs" />
-    <Compile Include="Models\EntityModel\Account\UserMapping.cs" />
-    <Compile Include="Models\EntityModel\Account\UserQuery.cs" />
+    <Compile Include="Models\EntityModel\Account\ClosureRequests\ClosureRequest.cs" />
+    <Compile Include="Models\EntityModel\Account\ClosureRequests\ClosureRequestMapping.cs" />
+    <Compile Include="Models\EntityModel\Account\ClosureRequests\ClosureRequestQuery.cs" />
+    <Compile Include="Models\EntityModel\Account\Tenants\ITenantData.cs" />
+    <Compile Include="Models\EntityModel\Account\PasswordRecoveries\PasswordRecovery.cs" />
+    <Compile Include="Models\EntityModel\Account\PasswordRecoveries\PasswordRecoveryMapping.cs" />
+    <Compile Include="Models\EntityModel\Account\PasswordRecoveries\PasswordRecoveryQuery.cs" />
+    <Compile Include="Models\EntityModel\Account\Tenants\TenantMapping.cs" />
+    <Compile Include="Models\EntityModel\Account\Tenants\TenantQuery.cs" />
+    <Compile Include="Models\EntityModel\Account\Users\UserMapping.cs" />
+    <Compile Include="Models\EntityModel\Account\Users\UserQuery.cs" />
     <Compile Include="Models\EntityModel\ApplicationContext.cs" />
-    <Compile Include="Models\EntityModel\Account\Tenant.cs" />
-    <Compile Include="Models\EntityModel\Account\User.cs" />
-    <Compile Include="Models\EntityModel\Catalog\Product.cs" />
-    <Compile Include="Models\EntityModel\Catalog\ProductMapping.cs" />
-    <Compile Include="Models\EntityModel\Catalog\ProductQuery.cs" />
-    <Compile Include="Models\EntityModel\Manage\Store.cs" />
-    <Compile Include="Models\EntityModel\Manage\StoreMapping.cs" />
-    <Compile Include="Models\EntityModel\Manage\StoreQuery.cs" />
-    <Compile Include="Models\EntityModel\Manage\Team.cs" />
-    <Compile Include="Models\EntityModel\Manage\TeamMapping.cs" />
-    <Compile Include="Models\EntityModel\Manage\TeamMember.cs" />
-    <Compile Include="Models\EntityModel\Manage\TeamMemberMapping.cs" />
-    <Compile Include="Models\EntityModel\Manage\TeamRule.cs" />
-    <Compile Include="Models\EntityModel\Manage\TeamRuleMapping.cs" />
+    <Compile Include="Models\EntityModel\Account\Tenants\Tenant.cs" />
+    <Compile Include="Models\EntityModel\Account\Users\User.cs" />
+    <Compile Include="Models\EntityModel\Catalog\Products\Product.cs" />
+    <Compile Include="Models\EntityModel\Catalog\Products\ProductMapping.cs" />
+    <Compile Include="Models\EntityModel\Catalog\Products\ProductQuery.cs" />
+    <Compile Include="Models\EntityModel\Manage\Stores\Store.cs" />
+    <Compile Include="Models\EntityModel\Manage\Stores\StoreMapping.cs" />
+    <Compile Include="Models\EntityModel\Manage\Stores\StoreQuery.cs" />
+    <Compile Include="Models\EntityModel\Manage\Teams\Team.cs" />
+    <Compile Include="Models\EntityModel\Manage\Teams\TeamMapping.cs" />
+    <Compile Include="Models\EntityModel\Manage\TeamMembers\TeamMember.cs" />
+    <Compile Include="Models\EntityModel\Manage\TeamMembers\TeamMemberMapping.cs" />
+    <Compile Include="Models\EntityModel\Manage\TeamRules\TeamRule.cs" />
+    <Compile Include="Models\EntityModel\Manage\TeamRules\TeamRuleMapping.cs" />
     <Compile Include="Models\EntityModel\Overview\CatalogCount.cs" />
     <Compile Include="Models\EntityModel\Overview\ManagementCount.cs" />
     <Compile Include="Models\EntityModel\TenantContext.cs" />
