--- a/src/Dyoub.Test/Dyoub.Test.csproj
+++ b/src/Dyoub.Test/Dyoub.Test.csproj
@@ -117,6 +117,13 @@
     <Compile Include="Contexts\Account\Users\SigninWrongPasswordContext.cs" />
     <Compile Include="Contexts\Account\Users\SignupEmailAlreadyTakenContext.cs" />
     <Compile Include="Contexts\Account\Users\SignupCorrectlyContext.cs" />
+    <Compile Include="Contexts\Catalog\PricingTables\ClearPricingTableContext.cs" />
+    <Compile Include="Contexts\Catalog\PricingTables\CopyPricingTableContext.cs" />
+    <Compile Include="Contexts\Catalog\PricingTables\FindPricingTableContext.cs" />
+    <Compile Include="Contexts\Catalog\PricingTables\ListPricingTableItemsContext.cs" />
+    <Compile Include="Contexts\Catalog\PricingTables\ListPricingTableItemsForSaleContext.cs" />
+    <Compile Include="Contexts\Catalog\PricingTables\ListPricingTablesContext.cs" />
+    <Compile Include="Contexts\Catalog\PricingTables\UpdatePricingTableContext.cs" />
     <Compile Include="Contexts\Catalog\Products\CreateProductContext.cs" />
     <Compile Include="Contexts\Catalog\Products\DeleteProductContext.cs" />
     <Compile Include="Contexts\Catalog\Products\FindProductContext.cs" />
@@ -135,13 +142,16 @@
     <Compile Include="Contexts\Manage\Stores\UpdateStoreContext.cs" />
     <Compile Include="Controllers\Account\RecoveryControllerTest.cs" />
     <Compile Include="Controllers\Account\UsersControllerTest.cs" />
+    <Compile Include="Controllers\Catalog\PricingTablesControllerTest.cs" />
     <Compile Include="Controllers\Catalog\ProductsControllerTest.cs" />
     <Compile Include="Controllers\Catalog\ServicesControllerTest.cs" />
     <Compile Include="Controllers\Manage\StoresControllerTest.cs" />
     <Compile Include="Factories\Account\PasswordRecoveryFactory.cs" />
     <Compile Include="Factories\Account\TenantFactory.cs" />
     <Compile Include="Factories\Account\UserFactory.cs" />
+    <Compile Include="Factories\Catalog\ProductPriceFactory.cs" />
     <Compile Include="Factories\Catalog\ServiceFactory.cs" />
+    <Compile Include="Factories\Catalog\ServicePriceFactory.cs" />
     <Compile Include="Factories\Manage\StoreFactory.cs" />
     <Compile Include="Factories\Manage\TeamFactory.cs" />
     <Compile Include="Factories\Manage\TeamMemberFactory.cs" />
